# myfit-workspace

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  api-start.sh
.github/workflows/: e2e.yml
docs/: PLANO_DE_TESTES_v1.11.md  README.md  especificacoes-tecnicas.md  jornadas-mermaid.md  journeys-plan.md  sequence-diagrams.md  tasks-gaps.md  ui-specifications.md
my-fit-api/: .env.example  README.md  docker-compose.yml  pyproject.toml
my-fit-api/src/: __init__.py  main.py
my-fit-api/src/config/: __init__.py  database.py  settings.py
my-fit-api/src/core/: redis.py
my-fit-api/src/core/models/: __init__.py  base.py
my-fit-api/src/core/security/: __init__.py  jwt.py
my-fit-api/src/domains/: models.py
my-fit-api/src/domains/auth/: __init__.py  dependencies.py  router.py  schemas.py  service.py
my-fit-api/src/domains/checkin/: __init__.py  models.py  router.py  schemas.py  service.py
my-fit-api/src/domains/gamification/: __init__.py  models.py  router.py  schemas.py  service.py
my-fit-api/src/domains/marketplace/: __init__.py  models.py  router.py  schemas.py  service.py
my-fit-api/src/domains/nutrition/: __init__.py  models.py  router.py  schemas.py  service.py
my-fit-api/src/domains/organizations/: __init__.py  models.py  router.py  schemas.py  service.py
my-fit-api/src/domains/progress/: __init__.py  models.py  router.py  schemas.py  service.py
my-fit-api/src/domains/trainers/: __init__.py  router.py  schemas.py
my-fit-api/src/domains/users/: __init__.py  models.py  router.py  schemas.py  service.py
my-fit-api/src/domains/workouts/: __init__.py  ai_service.py  models.py  router.py  schemas.py  service.py
my-fit-api/src/scripts/: __init__.py  seed_exercises.py
